--- a/ui/index.html
+++ b/ui/index.html
@@ -11,7 +11,7 @@
         <div class="center text-big bold">
             Hi! This is my WEBAPP!!
 	    <h1>Made local changes :)</h1>	
-	    This is kuttan here...	
+	    kuttan unavailable
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
