--- a/ui/index.html
+++ b/ui/index.html
@@ -1,19 +1,30 @@
 <!doctype html>
 <html>
-    <head>
-        <link href="/ui/style.css" rel="stylesheet" />
-    </head>
-    <body>
-        <div class="center">
-            <img src="/ui/madi.png" class="img-medium"/>
+  <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.2.10/semantic.min.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="shortcut icon" href="http://www.miramarinmobiliario.com.ar/images/icons/header_blogger.png">
+    <link rel="stylesheet" href="/ui/style.css">
+    <title>Blog | Home</title>
+  </head>
+  <body>
+    <div class="ui container">
+      <br>
+      <img  id="kuttan" class="ui medium centered rounded image" src="/ui/madi.png"/>
+      <hr>
+      <div id="profile">
+        <h1>Anupam Asok</h1>
+        <button class="ui teal button" id="counter-btn">Increement</button>
+        Value of counter is <span id="counter">0</span>
+        <hr/>
+        <div class="ui input">
+          <input type="text" id="name" placeholder="Enter your name...">
+          <button id="submit-btn" class="ui button">Submit</button>
         </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! This is my WEBAPP
-	    <h1>Made local changes :)</h1>
-	    This is kuttan here...
-        </div>
-        <script type="text/javascript" src="/ui/main.js">
-        </script>
-    </body>
+        <ul id="namelist"></ul>
+        <br/>
+      </div>
+    </div>
+    <script type="text/javascript" src="/ui/main.js"></script>
+  </body>
 </html>
